src/test/resources/syntax/invalid/group_definition_multiple_strict.unpick
unpick v3
group int
    @strict
    @strict
